--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Home</h1>
+      <h1 class="project-name">Personal Homepage</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/guxuyang/Home" class="btn">View on GitHub</a>
       <a href="https://github.com/guxuyang/Home/zipball/master" class="btn">Download .zip</a>
