--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <style type="text/css">
+    #xiamen_table{border:1px solid #ccc;}
+    #xiamen_table td{padding: 1% 2%;vertical-align:middle;text-align:center;color: #fff;border: 1px solid #fff;background: #4db0fc;}
+    #xiamen_table .first-of-type{background: #0079c2;font-weight: bold;}
+    </style>
   </head>
   <body>
     <section class="page-header">
@@ -22,7 +27,69 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<table width="100%" id="xiamen_table" cellpadding="0" cellspacing="0">
+  <tr>
+    <td width="20%" class="first-of-type">Day 1</td>
+    <td width="20%">11:00</td>
+    <td width="60%">晚餐--开元141大排档(开元路141-154号)</td>
+  </tr>
+  <tr>
+    <td width="20%" rowspan="10" class="first-of-type">Day 2</td>
+    <td width="20%">9:00</td>
+    <td width="60%">起床</td>
+  </tr>
+  <tr>
+    <td width="20%">10:00</td>
+    <td width="60%">local breakfast(酒店附近找)</td>
+  </tr>
+  <tr>
+    <td width="20%">11:00</td>
+    <td width="60%">东渡码头--鼓浪屿</td>
+  </tr>
+  <tr>
+    <td width="20%">13:00</td>
+    <td width="60%">午饭--粒粒香肉燕皮扁食店（鼓浪屿龙头路169号）</td>
+  </tr>
+  <tr>
+    <td width="20%">16:00</td>
+    <td width="60%">鼓浪屿--东渡码头</td>
+  </tr>
+  <tr>
+    <td width="20%">17:00</td>
+    <td width="60%">东渡码头--马杀鸡（大保健）</td>
+  </tr>
+  <tr>
+    <td width="20%">19:00</td>
+    <td width="60%">晚饭（酒店附近找</td>
+  </tr>
+  <tr>
+    <td width="20%">21:00</td>
+    <td width="60%">酒吧喝一杯</td>
+  </tr>
+  <tr>
+    <td width="20%">21:00</td>
+    <td width="60%">酒吧喝一杯</td>
+  </tr>
+  <tr>
+    <td width="20%">00:00</td>
+    <td width="60%">回房间睡觉</td>
+  </tr>
+  <tr>
+    <td width="20%" rowspan="3" class="first-of-type">Day 3</td>
+    <td width="20%">10:00</td>
+    <td width="60%">起床</td>
+  </tr>
+  <tr>
+    <td width="20%">11:00</td>
+    <td width="60%">早午餐</td>
+  </tr>
+  <tr>
+    <td width="20%">13:00</td>
+    <td width="60%">环岛路--租自行车</td>
+  </tr>
+</table>
+
+<!-- <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -42,7 +109,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p> -->
 
       
 
